--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,5 @@ body {
     background-color: transparent;
     width: 100%;
     height: 100vh;
-    border: 1px solid black;
+    border: 1px solid;
 }
