--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
 
 body {
     background-color: black;
-    margin: 10px;
+    margin: 0px;
     padding: 0px;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 #canvas {
-    background-color: transparent;
+    background-color: black;
     width: 100%;
-    height: 100vh;
-    border: 1px solid;
+    height: 100%;
+    /* border: 1px solid; */
 }
