--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 
+html, body{
+    overflow-x: hidden;
+}
+
 body {
+    position: relative;
     background-color: black;
     font-family: termina, sans-serif;
     margin: 0px;
